Add CRUD With HTTP Client

--- a/Client/Views/Shared/_Layout.cshtml
+++ b/Client/Views/Shared/_Layout.cshtml
@@ -35,8 +35,11 @@
                         <li style="background-color:black; border-radius: 0.45rem; margin-right: 8px" class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Latihan2" asp-action="Index">Latihan 2</a>
                         </li>
+                        <li style="background-color:black; border-radius: 0.45rem; margin-right: 8px" class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Latihan3" asp-action="Index">Latihan Ajax</a>
+                        </li>
                         <li style="background-color:black; border-radius: 0.45rem" class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Latihan3" asp-action="Index">Latihan 3</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Employee" asp-action="Index">Latihan Razor</a>
                         </li>
                     </ul>
                 </div>
