--- a/Client/Views/Latihan3/Index.cshtml
+++ b/Client/Views/Latihan3/Index.cshtml
@@ -4,7 +4,7 @@
 @{
 }
 <h1 id="judul"><i class="fas fa-users"></i> Employee</h1>
-<div style="margin-bottom: 8px; float: right"><button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCreate">Create</button> <button class="btn btn-info" onclick="showGenderChart()">Chart Gender</button> <button class="btn btn-warning" onclick="showUniversityChart()">Chart University</button></div>
+<div style="margin-bottom: 8px; float: right"><button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCreate">Create</button> <button class="btn btn-info" onclick="showChart()">Chart</button> @*<button class="btn btn-warning" onclick="showUniversityChart()">Chart University</button>*@</div>
 <table id="myTable2" class="table table-striped table-hover">
     <thead class="table" style="background-color:khaki; color: black">
         <tr class="kolom">
@@ -142,12 +142,15 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Gender Chart</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Chart</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <div class="chart-container">
-                    <canvas id="genderChart"></canvas>
+                <div class="row mb-5">
+                    <div class="col"> <canvas id="genderChart"></canvas></div>
+                </div>
+                <div class="row">
+                    <div class="col"> <canvas id="universityChart"> </canvas></div>
                 </div>
             </div>
         </div>
@@ -159,7 +162,7 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Gender Chart</h5>
+                <h5 class="modal-title" id="exampleModalLabel">University Chart</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
