Login And Register Client

--- a/Client/Views/Employee/Index.cshtml
+++ b/Client/Views/Employee/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1 class="text-center border-bottom border-3 border-dark"><i class="fas fa-users"></i> Employee</h1>
+<h1 class="text-center border-bottom border-3 border-dark text-center"><i class="fas fa-users"></i> Employee</h1>
 <div style="margin-bottom: 8px; float: right"><a class="btn btn-primary" href="Employee/Create">Create New</a></div>
 
-<table class="table text-center ">
+<table id="tableEmployee" class="table text-center ">
     <thead style="background-color:khaki; color: black">
         <tr>
             @*<th>
