--- a/Client/Views/Latihan3/Index.cshtml
+++ b/Client/Views/Latihan3/Index.cshtml
@@ -4,7 +4,7 @@
 @{
 }
 <h1 id="judul"><i class="fas fa-users"></i> Employee</h1>
-<div style="margin-bottom: 8px; float: right"><button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCreate">Create</button> <button class="btn btn-info" onclick="showChart()">Chart</button> @*<button class="btn btn-warning" onclick="showUniversityChart()">Chart University</button>*@</div>
+<div style="margin-bottom: 8px; float: right"><button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCreate">Create</button> <button class="btn btn-info" onclick="showChart()">Chart</button></div>
 <table id="myTable2" class="table table-striped table-hover">
     <thead class="table" style="background-color:khaki; color: black">
         <tr class="kolom">
